# pybind_protobuf_cmake_test

./: CMakeLists.txt
proto/: CMakeLists.txt  integer.pb.cc  integer.pb.h  integer.proto
src/: main.cpp
